# universal-agent-context

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.mcp-server  GEMINI.md  LICENSE  MEMORY_SYSTEM_REVIEW.md  Makefile  QUICKSTART.md  README.md  README.md.backup  REVIEW_SUMMARY.md  coverage.xml  docker-compose.yml  pyproject.toml  uacs-development.code-workspace  uacs-macos-arm64.spec  uacs-mcp-server.spec  verify_links.py  verify_memory_review.py
.agent/skills/pyinstaller-expert/: SKILL.md
.claude-plugin/: HOOKS_GUIDE.md  install.sh  plugin-enhanced.json  plugin-proactive.json  plugin-semantic.json  plugin.json  test_hook.py
.claude-plugin/hooks/: uacs_capture_message.py  uacs_extract_knowledge.py  uacs_inject_context.py  uacs_monitor_context.py  uacs_precompact.py  uacs_store.py  uacs_store_realtime.py  uacs_tag_prompt.py
.claude-plugin/skills/: uacs_context.md
.github/: CLAUDE_CODE_HOOKS_ENHANCED.md  CLAUDE_CODE_INTEGRATION_TODO.md  CLAUDE_CODE_PLUGIN_READY.md  COMPACTION_PREVENTION_STRATEGY.md  DOCUMENTATION_AUDIT_2026-02-03.md  DOCUMENTATION_UPDATE_SUMMARY.md  HONEST_LAUNCH_PLAN.md  NEXT_JS_WEB_UI_COMPLETE.md  PHASE_3_COMPLETION_PLAN.md  PLUGIN_EVOLUTION.md  PRE_RELEASE_AUDIT.md  RELEASE_NOTES_v0.1.0.md  RELEASE_STRATEGY.md  REPOSITORY_SETTINGS.md  SESSION_SUMMARY.md  SKILL_SUGGESTION_SYSTEM.md  TASK_GROUP_5_TEST_SUITE.md  TASK_GROUP_6_DOCUMENTATION.md  TASK_GROUP_7_REFINEMENTS.md  TESTING_PLAN.md  TEST_RESULTS.md  TRACE_VISUALIZATION_DESIGN.md  TRACE_VIZ_IMPLEMENTATION_STATUS.md  VISUALIZATION_FEATURE_SUMMARY.md  WEB_UI_COMPLETED.md  WEB_UI_IMPLEMENTATION_STATUS.md  WEB_UI_SEMANTIC_INTEGRATION.md  WORKFLOWS.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/archive/: SKILLS_MD_FORMAT.md
.github/archive/testing/: TESTING_STATE_2026-01-31.md
.github/internal/: DEVELOPMENT_ROADMAP.md  LAUNCH_STRATEGY.md  PERFORMANCE_BENCHMARKS.md  SECURITY_IMPLEMENTATION.md  V0.1.0_LAUNCH_GUIDE.md
.github/internal/proposals/: SURREALDB_MEMORY_DESIGN.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONTEXT.md  DEMOS.md  EMBEDDING_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  INSPIRATION_ANALYSIS.md  KNOWLEDGE_MANAGER_IMPLEMENTATION.md  LIBRARY_GUIDE.md  MARKETPLACE.md  MCP_SERVER_DOCKER.md  MCP_SERVER_SETUP.md  MIGRATION.md  MIGRATION_SIMPLE_TO_SEMANTIC.md  PACKAGES.md  SECURITY.md  SKILLS_MD_FORMAT.md  red-team-future-tasks.md
docs/archive/: MARKETPLACE_AGGREGATION_STRATEGY.md  uacs_code_review_report.txt  uacs_security_review_report.txt
docs/archive/builds/: VISUALIZATION_BUILD_COMPLETE_2026-01-31.md
docs/archive/phase5/: COMPLETION_REPORT.md  INTEGRATION_PROMPT.md
docs/archive/testing/: TESTING_STATE_2026-01-31.md
docs/dev/: DEV_TOOLS.md  IMPLEMENTATION_ROADMAP.md
docs/features/: ADAPTERS.md  INTEGRATIONS.md  VISUALIZATION.md
docs/guides/: DEVELOPMENT.md  MCP_SERVER_BINARY.md  MCP_SERVER_DOCKER.md  MCP_SERVER_SETUP.md
docs/integrations/: CLAUDE_DESKTOP.md  CURSOR.md  WINDSURF.md
docs/proposals/: OPENTELEMETRY_ADAPTER_PROPOSAL.md  README.md
docs/uacs/: SURREALDB_MEMORY_DESIGN.md
examples/: 01_semantic_basics.py  02_claude_code_integration.py  03_web_ui.py  04_search_and_knowledge.py  DEMOS.md  README.md  VISUALIZATION_QUICKSTART.md  basic_context.py  compression_example.py  custom_adapter.py  custom_marketplace_repo.py  demo_comprehensive.py  marketplace_search.py  mcp_tool_usage.py  memory_usage.py  multi_format_translation.py  package_install.py  visualization_demo.py
examples/01_basic_setup/: README.md  demo.py  output.txt
examples/02_context_compression/: comparison.md
examples/04_topic_based_retrieval/: README.md  demo.py  use_cases.md
examples/05_claude_code_integration/: README.md  demo.py
examples/quickstart/: custom_adapter.py  mcp_tool_usage.py  memory_usage.py  multi_format_translation.py
examples/tutorials/02_context_compression/: README.md  demo.py
examples/tutorials/03_multi_agent_context/: README.md  architecture.md  demo.py
examples/tutorials/05_claude_code_integration/: DESIGN.md
scripts/: README.md  build_mcp_server.py  docker_quickstart.sh  test_visualization.sh
src/uacs/: __init__.py  api.py  mcp_server_entry.py  semantic.py  skills_validator.py  visualization.py
src/uacs/adapters/: __init__.py  agent_skill_adapter.py  agents_md_adapter.py  base.py  clinerules_adapter.py  cursorrules_adapter.py
src/uacs/cli/: __init__.py  context.py  main.py  marketplace.py  mcp.py  memory.py  packages.py  plugin.py  skills.py  utils.py
src/uacs/config/: repositories.yaml
src/uacs/context/: agent_context.py  shared_context.py  unified_context.py
src/uacs/conversations/: __init__.py  manager.py  models.py
src/uacs/embeddings/: __init__.py  manager.py
src/uacs/knowledge/: __init__.py  manager.py  models.py
src/uacs/marketplace/: __init__.py  cache.py  marketplace.py  packages.py  repositories.py
src/uacs/memory/: __init__.py  simple_memory.py  surreal_store.py
src/uacs/protocols/: __init__.py
src/uacs/utils/: __init__.py  paths.py
src/uacs/visualization/: README.md  __init__.py  models.py  storage.py  web_server.py
tests/: conftest.py  test_adapters.py  test_agent_skill_precedence.py  test_api.py  test_context.py  test_conversation_manager.py  test_focused_context.py  test_knowledge_manager.py  test_multi_skills.py  test_package_sources.py  test_packages.py  test_readme_example.py  test_semantic_search.py  test_semantic_web_ui.py  test_simple_memory.py  test_skills_validator.py  test_uacs_unified_api.py  test_visualization_server.py
tests/integration/: test_mcp_server_binary.py  test_mcp_server_docker.py
tests/unit/: __init__.py
uacs-web-ui/: .env.local.example  .gitignore  README.md  components.json  next.config.ts  package.json  pnpm-lock.yaml
uacs-web-ui/app/: globals.css  layout.tsx  page.tsx
uacs-web-ui/components/: component-example.tsx  knowledge-view.tsx  navigation.tsx  search-view.tsx  sessions-view.tsx  timeline-view.tsx
(+11 files in other folders)
